<resources>
    <string name="app_name">FourSquare</string>

    <!-- RequirementSatisfier Screen -->
    <string name="access_location_permission">fourSquare needs access to your phone location</string>
    <string name="permission_bio">FourSquare needs your permission!</string>
    <string name="permission_body">We need to access to your phone location</string>
    <string name="permission_action">Allow GPS</string>
    <string name="location_bio">Your GPS is off we can\'t find you !</string>
    <string name="location_body">Please turn on GPS to find your exact location</string>
    <string name="location_action">Turn on GPS</string>
    <string name="toast_gps">Please turn on your gps from settings</string>
    <string name="toast_permission">Please allow FourSquare to access your phone location</string>

    <!-- Error Handling -->
    <string name="error_no_internet">no internet connection</string>
    <string name="error_server_error">server error happened</string>
    <string name="error_unknown">problem happened with your request</string>

    <string name="empty" />

    <string name="distance_place_holder">%1$s m far away</string>

    <!-- VenueDetail Screen -->
    <string name="venue_detail_header">Details</string>
    <string name="venue_address_header">Address</string>
    <string name="venue_description_header">Description</string>
    <string name="call">Call</string>
    <string name="directions">Directions</string>
    <string name="undefined_status">Undefined Service hours</string>
    <string name="empty_description">No Description for this location!</string>
    <string name="undefined_rate">undefined</string>
    <string name="unknown_category">Unknown Category</string>

    <string name="no_internet_dashboard">Oops! Your Network connection failed</string>
    <string name="location_updating">Updating Location …</string>
    <string name="no_locations">There is no locations to show !</string>

</resources>