<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/background"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:animateLayoutChanges="true"
                android:background="@color/venue_detail_header_background"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/backIv"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:animateLayoutChanges="true"
                    android:background="@drawable/back_button_background"
                    android:padding="15dp"
                    app:srcCompat="@drawable/ic_arrow_left" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/nameTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:lines="1"
                    android:paddingHorizontal="2dp"
                    android:paddingBottom="10dp"
                    android:textAppearance="@style/TextAppearance.App.Headline1.Pink" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.cardview.widget.CardView
                style="@style/Widget.App.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="-50dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="15dp"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/venue_detail_header"
                        android:textAppearance="@style/TextAppearance.App.Subtitle1.Pink" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/categoryTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:lines="1"
                        android:paddingVertical="20dp"
                        android:textAppearance="?attr/textAppearanceHeadline4" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:animateLayoutChanges="true"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/ratingTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="8dp"
                            android:maxLength="3"
                            android:textAppearance="@style/TextAppearance.App.Subtitle2.Black"
                            tools:text="3.5" />

                        <androidx.appcompat.widget.AppCompatRatingBar
                            android:id="@+id/ratingBar"
                            style="?attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:animateLayoutChanges="true"
                        android:orientation="horizontal"
                        android:paddingVertical="15dp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/isOpenIv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="5dp"
                            app:srcCompat="@drawable/ic_is_open" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/openStatusTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:lines="1"
                            android:textAppearance="@style/TextAppearance.App.Subtitle4" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/callBtn"
                        style="@style/TextAppearance.App.Button.Bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableStart="@drawable/ic_call"
                        android:enabled="false"
                        android:gravity="center"
                        android:text="@string/call" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                style="@style/Widget.App.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="25dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="15dp"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/venue_address_header"
                        android:textAppearance="@style/TextAppearance.App.Subtitle1.Pink" />


                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:animateLayoutChanges="true"
                        android:orientation="horizontal"
                        android:paddingVertical="15dp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="5dp"
                            app:srcCompat="@drawable/ic_location_pin" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/addressTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="15dp"
                            android:paddingVertical="15dp"
                            android:textAppearance="@style/TextAppearance.App.Subtitle1.Medium" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/directionBtn"
                        style="@style/TextAppearance.App.Button.Bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableStart="@drawable/ic_direction"
                        android:gravity="center"
                        android:text="@string/directions" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                style="@style/Widget.App.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="25dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="15dp"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/venue_description_header"
                        android:textAppearance="@style/TextAppearance.App.Subtitle1.Pink" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/descriptionTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:paddingVertical="15dp"
                        android:textAppearance="@style/TextAppearance.App.Subtitle1" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="30dp"
                        android:animateLayoutChanges="true"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/likesTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="5dp"
                            android:textAppearance="@style/TextAppearance.App.Subtitle1.Medium.Pink" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/ic_heart" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>